# global_illumination

./: .gitignore  CMakeLists.txt  Camera.cpp  Camera.h  ColorDbl.cpp  ColorDbl.h  ColorRGB.cpp  ColorRGB.h  Material.h  Pixel.cpp  Pixel.h  PointLight.cpp  PointLight.h  Ray.cpp  Ray.h  RayTracer.cpp  RayTracer.h  Renderer.cpp  Renderer.h  Scene.cpp  Scene.h  Sphere.cpp  Sphere.h  Triangle.cpp  Triangle.h  main.cpp
material/: BaseMaterial.cpp  BaseMaterial.h  DiffuseMaterial.cpp  DiffuseMaterial.h  EmissionMaterial.cpp  EmissionMaterial.h  OrenNayarMaterial.h  SpecularMaterial.cpp  SpecularMaterial.h  TransmissionMaterial.cpp  TransmissionMaterial.h
photon_mapping/: BoundingBox.cpp  BoundingBox.h  Photon.cpp  Photon.h  PhotonKdTree.cpp  PhotonKdTree.h  PhotonMapper.cpp  PhotonMapper.h  PhotonOctree.cpp  PhotonOctree.h
scene/: BoundingBox.cpp  BoundingBox.h  Object3d.cpp  Object3d.h  Scene.cpp  Scene.h  Triangle.cpp  Triangle.h
